--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -51,7 +51,7 @@
 	<div class="flex-container">
 		<div><a href="page21.html">The <br> Classified File</a></div>
 		<div><a href="page22.html">The <br> Concubine</a></div>
-		<div><a href="page23.html">The <br> Frontline</a></div>
+		<div><a href="page23.html">The <br> Front Line</a></div>
 		<div><a href="page24.html">The Good <br> The Bad <br> The Weird</a></div>
 	</div>
 
@@ -63,15 +63,15 @@
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page29.html"> The Taste <br> Of Money</a></div>
-		<div><a href="page30.html">The Terror Live</a></div>
+		<div><a href="page29.html">The Taste <br> Of Money</a></div>
+		<div><a href="page30.html">The <br> Terror Live</a></div>
 		<div><a href="page31.html">The Thieves</a></div>
 		<div><a href="page32.html">The Unjust</a></div>
 	</div>
 
 	<div class="flex-container">
 		<div><a href="page33.html">The Wailing</a></div>
-		<div><a href="page34.html">Thist</a></div>
+		<div><a href="page34.html">Thirst</a></div>
 		<div><a href="page35.html">Tower</a></div>
 		<div><a href="page36.html">Tunnel</a></div>
 	</div>
