--- a/6_obsession/page10.html
+++ b/6_obsession/page10.html
@@ -36,7 +36,7 @@
 		<h3 class="bold"> Director </h3>
 		<p class="regular">Hwang Dong-hyuk</p>	
 		<br>
-		<h3 class="bold"> Summary </h3>
+		<h3 class="bold"> Plot</h3>
 		<p class="regular"> 
 			Oh Mal-soon, a 74-year-old widow, lives with her son and his family. Foul-mouthed, stubborn, controlling and shameless, she has a difficult relationship with her depressed daughter-in-law Ae-ja, but is very proud of her son Hyun-chul, who became a university professor of gerontology, and whom she raised by herself against all odds. One day, Ae-ja gets hospitalized after suddenly collapsing. Her doctors strongly advise her to live apart from Mal-soon. On the day she is told by her son that she is being sent to a nursing home, the dismayed Mal-soon wanders the streets and comes across a mysterious photo studio that claims it captures the moments of one's youth. She takes what she believes will be her last self-portrait for her not-so-far-off funeral, but when she comes out of the studio, Mal-soon is dumbfounded by her own reflection in the mirror: she's now a fresh, young 20-year-old woman.
 		</p>
