--- a/6_obsession/page13.html
+++ b/6_obsession/page13.html
@@ -35,7 +35,7 @@
 		<h3 class="bold"> Director </h3>
 		<p class="regular">Kim Dae-woo</p>	
 		<br>
-		<h3 class="bold"> Summary </h3>
+		<h3 class="bold"> Plot </h3>
 		<p class="regular"> 
 			Decorated war hero Colonel Kim Jin-pyong is on the verge of his promotion to general. From his commander father-in-law to beautiful wife, Jin-pyong is the subject of much envy and jealousy. But his affection for his wife has subsided a long ago, and due to post-traumatic disorder from Vietnam War, he suffers mental breakdowns and nightmares of the fallen soldiers under his command.
 			<br>
