--- a/6_obsession/page19.html
+++ b/6_obsession/page19.html
@@ -6,6 +6,50 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Seopyonje</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/19_1_ Seopyonje.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/19_1_ Seopyonje.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/19_2_Japanese.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Seopyonje</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Im Kwon-taek</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			In a jumak (a tavern) on a small pass called Soritjae of Boseong County, South Jeolla Province, during the early 1960s, Dong-ho who is in his 30s, recalls his past as he is listening to a rendition of "pansori" sung by the jumak owner. Dong-ho and his sister Song-hwa were raised by the pansori singer Yu-bong, who treats them sternly and with a strict training regimen in his attempts to make serious artists of them as Yu-bong feels that a truly great pansori artist must suffer. Eventually Dong-ho runs away but Song-hwa stays behind.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page20.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page18.html"></a>
+	</div>
 
 </body>
 </html>
