--- a/6_obsession/page2.html
+++ b/6_obsession/page2.html
@@ -39,7 +39,7 @@
 			<h3 class="bold"> Director </h3>
 			<p class="regular">Lee Hae-jun</p>	
 			<br>
-			<h3 class="bold"> Summary </h3>
+			<h3 class="bold"> Plot</h3>
 			<p class="regular"> 
 				Kim Seong-geun (Jung Jae-young) is deep in debt and his life seems completely hopeless. He jumps off a bridge into the Han River and washes up on the shore of Bamseom, which lies directly below the bridge. After searching the island he finds it is filled mostly with vegetation and surrounded by the city but too far to shout and he can't swim. He finds a duck-shaped boat and begins to like living on the island, free of his debt and worries of city life, though it is not easy.
 			</p>
