--- a/6_obsession/page20.html
+++ b/6_obsession/page20.html
@@ -6,6 +6,61 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Sympathy For Lady Vengeance</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/20_7.png" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/20_1_SympathyForLadyVengeance.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/20_2.jpeg" alt="Foriegn Version"> 
+	</div>
+
+	<div class="flex two">
+		<img class="poster margin" src="assets/imgs/20_3.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/20_4.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<div class="flex two">
+		<img class="poster margin" src="assets/imgs/20_5.png" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/20_6.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Sympathy For Lady Vengeance</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Park Chan-wook</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			A Christian musical procession waits with a symbolic block of tofu outside a prison for the release of Lee Geum-ja (Lee Young-ae), a recently reformed female prisoner. Convicted of kidnapping and murdering a 5-year-old schoolboy, Won-mo, 13 years earlier, Geum-ja became a national sensation because of her young age, angelic appearance, and eager confession to the crime. However, she became an inspirational model for prisoner reform during her incarceration, and her apparent spiritual transformation in prison earned her an early release on her sentence. Free, Geum-ja is now intent on revenge.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page21.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page19.html"></a>
+	</div>
 
 </body>
 </html>
