--- a/6_obsession/page21.html
+++ b/6_obsession/page21.html
@@ -6,6 +6,51 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Classified File</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/21_1_TheClassifiedFile.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/21_1_TheClassifiedFile.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/21_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Classified File</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Kwak Kyung-taek</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			A young girl named Eun-joo has gone missing in Busan in 1978. Without any contact from the kidnapper in the past two weeks and no further leads or clues, the police assume that she's dead. Eun-joo's desperate mother turns to renowned fortune-teller Kim Joong-san, who tells her that her daughter is still alive and that she can be saved if they enlist the help of veteran detective Gong Gil-yong. Despite his skepticism, Gil-yong accepts the case. When one of Joong-san's premonitions about the investigation comes true, Gil-yong begins to believe in his psychic abilities, and the two men team up in an unlikely partnership to find Eun-joo and bring her home.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page22.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page20.html"></a>
+	</div>
 
 </body>
 </html>
