--- a/6_obsession/page22.html
+++ b/6_obsession/page22.html
@@ -6,6 +6,51 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Concubine</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/22_1_TheConcubine.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/22_1_TheConcubine.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/22_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Concubine</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Kim Dae-seung</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			Set during the early Joseon Dynasty, the film begins with a concubine of the previous king (Park Ji-young) in a precarious position of having no blood ties to her step son, the current childless, widow king (Jung Chan). She schemes to replace him on the throne with her submissive young son Sung-won (Kim Dong-wook). Indifferent to his mother’s plans, the timid prince falls in love at first sight with Hwa-yeon (Jo Yeo-jeong), an aristocrat’s daughter, who has already found love with Kwon-yoo (Kim Min-joon), a low-born commoner. When her father (Ahn Suk-hwan) must send her to the royal palace as a concubine for the king, the two lovers try to elope but are caught after their first night together. Hwa-yeon agrees to enter the palace in exchange for saving Kwon-yoo's life.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page23.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page21.html"></a>
+	</div>
 
 </body>
 </html>
