--- a/6_obsession/page23.html
+++ b/6_obsession/page23.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Frontline</title>
+	<title>The Front Line</title>
 	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Front Line</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/23_1_TheFrontLine.png" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/23_1_TheFrontLine.png" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/23_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Front Line</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Jang Hoon</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			Early in the Korean War in 1950 as the North is rolling through South Korea, South Korean privates Eun-pyo (Shin Ha-kyun) and Soo-hyeok (Go Soo) are captured during a battle and brought to North Korean captain Jung-yoon. Jung-yoon declaims to the prisoners that the war will be over in a week and that he knows exactly why they are fighting this devastating war, brother against brother. Afterwards he lets the prisoners go free, so that they can help reconstruct the nation after the war.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page24.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page22.html"></a>
+	</div>
 
 </body>
 </html>
