--- a/6_obsession/page24.html
+++ b/6_obsession/page24.html
@@ -6,6 +6,52 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Good The Bad The Weird</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/24_1_TheGoodTheBadTheWeird.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/24_1_TheGoodTheBadTheWeird.jpg" alt="Korean Version"> 
+		<img class="poster margin" src="assets/imgs/24_2.jpg" alt="Foriegn Version"> 
+		<img class="poster" src="assets/imgs/24_3.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Good The Bad The Weird</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Kim Jee-woon</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			In the desert wilderness of Manchuria in 1939, months before the Second World War. Park Chang-yi, The Bad (Lee Byung-hun)—a bandit and hitman—is hired to acquire a treasure map from a Japanese official traveling by train. Before he can get it however, Yoon Tae-goo, The Weird (Song Kang-ho)—a thief—steals the map and is caught up in The Bad's derailment of the train. This involves the slaughter of the Japanese and Manchurian guards, and various civilians. Park Do-won, The Good (Jung Woo-sung)—an eagle-eyed bounty hunter—appears on the scene to claim the bounty on Chang-yi. Meanwhile, Tae-goo escapes, eluding his Good and Bad pursuers. A fourth force—a group of Manchurian bandits—also want the map to sell to the Ghost Market. Tae-goo hopes to uncover the map's secrets and recover what he believes is gold and riches buried by the Qing Dynasty just before the collapse of their government. As the story continues, an escalating battle for the map occurs, with bounties placed on heads and the Imperial Japanese Army racing to reclaim its map as it can apparently "save the Japanese Empire".
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page25.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page23.html"></a>
+	</div>
 
 </body>
 </html>
