--- a/6_obsession/page25.html
+++ b/6_obsession/page25.html
@@ -6,6 +6,51 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Himalayas</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/25_1_TheHimalayas.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/25_1_TheHimalayas.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/25_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Himalayas</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Lee Seok-hoon</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			During a climb up Kangchenjunga, a mountaineer named Um Hong-gil (Hwang Jung-min) saves the life of Park Moo-taek (Jung Woo) and his friend Park Jeong-Bok (Kim In-kwon), in the aftermath he warned them never to climb mountains again. A few days later he and his crew got a project and he needs new members. One of his crew members introduced him to two young members who happen to be the ones he asked not to climb mountains. He refused to accept them but they would not give up, he had no choice but to say yes to their request to join in the crew's next adventure.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page26.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page24.html"></a>
+	</div>
 
 </body>
 </html>
