--- a/6_obsession/page26.html
+++ b/6_obsession/page26.html
@@ -6,6 +6,56 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Host</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/26_1_TheHost.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/26_1_TheHost.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/26_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Host</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Bong Joon-ho</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			In 2000, an American military pathologist orders his Korean assistant to dump 200 bottles of formaldehyde down a drain leading into the Han River. Over the next several years, there are sightings of a strange amphibious creature in the waterway, and the fish in the river die off. A suicidal man, just before jumping into the river, sees something dark moving in the water.
+			<br>
+			<br>
+			In 2006, a slow-witted young man named Park Gang-du (Song Kang-ho) runs a small snack-bar in a park near the River with his father, Hee-bong (Byun Hee-bong). Other family members are Gang-du's daughter, Hyun-seo (Go Ah-sung); his sister Nam-joo (Bae Doona), a national medalist archer; and his brother, Nam-il (Park Hae-il), an alcoholic college graduate and former political activist.
+			<br>
+			<br>
+			While Gang-du is delivering food to some customers, a huge creature emerges from the Han River and begins attacking people. Gang-du sees his daughter in the crowd and tries to grab her and run. As he realizes he has grabbed the wrong girl, he sees the creature snatching Hyun-seo and diving back into the river. After a mass funeral for the victims, government representatives and the American military arrive and quarantine people who had contact with the creature, including Gang-du and his family. It is announced that the creature is not only a direct danger, but also the host of a deadly, unknown virus.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page27.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page25.html"></a>
+	</div>
 </body>
 </html>
