--- a/6_obsession/page27.html
+++ b/6_obsession/page27.html
@@ -6,6 +6,56 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Housemaid</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/27_1_TheHousemaid.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/27_1_TheHousemaid.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/27_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Housemaid</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">	Im Sang-soo</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			The film opens with a bustling city street, where a young woman commits suicide by jumping from a building ledge to her death. Eun-yi, who works as a worker in a restaurant, persuades her coworker and roommate to drive her to the scene of the suicide, and she stands distraught over the chalk outline where the woman's body had lain. The next morning, an older woman by the name of Byeong-sik visits her small apartment and later expresses interest in giving her a job.
+			<br>
+			<br>
+			Eun-yi is hired as an au pair for Hae-ra (pregnant with twins) and her rich husband Hoon. Eun-yi's primary task is watching the couple's young daughter, Nami. Eun-yi is eager to connect to Nami, who gradually warms to her. Hoon begins to secretly flirt with Eun-yi, enticing her with glasses of wine and his piano playing, and they eventually begin a sexual relationship. Despite the affair, Eun-yi is still warm and friendly to Hoon's oblivious wife, Hae-ra; she even expresses enthusiasm and delight at the progress of Hae-ra's pregnancy.
+			<br>
+			<br>
+			Byeong-sik, aka "Miss Cho" (the other live-in maid, originally Hae-ra's childhood maid) witnesses Eun-yi and Hoon having sex. She tries to subtly pry details from Eun-yi, but Eun-yi brushes her off casually. Later, Miss Cho reveals her suspicion to Hae-ra's mother that Eun-yi is pregnant. Hae-ra's mother then visits the family and stages an "accident," resulting in Eun-yi falling from a ladder positioned at the top of a set of stairs. Dangling from a chandelier, Eun-yi begs Hae-ra's mother to pull her over the railing. Hae-ra's mother does not oblige, and Eun-yi falls. Suffering only a concussion, Eun-yi spends the night in the hospital. During her stay, she learns that she is pregnant and contemplates abortion. Meanwhile, the affair is revealed to Hae-ra.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page27.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page25.html"></a>
+	</div>
 </body>
 </html>
