--- a/6_obsession/page28.html
+++ b/6_obsession/page28.html
@@ -6,6 +6,53 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Priests</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/28_1_ThePriests.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/28_1_ThePriests.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/28_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Priests</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">	Jang Jae-hyun</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			A young girl who belongs to Father Kim's parish becomes comatose after a hit-and-run accident. Father Kim finds out she is possessed by an evil spirit. Father Kim along with a rebellious young seminarian named Choi who is unsure about the spiritual warfare, tries to exorcise the demon and confine it in a piglet. Rosicrucianism informs Father Kim two of their priests was killed by this demon. Manifestations of the demon terrifies Choi and he runs out, but comes back to finish what they started with the determination. Father Kim tells him to believe this ministry isn't in vain and the reward is in the Lord’s hand (Isaiah 49:4). Choi replies to it by quoting Ezekiel 2:6, and affirms he is prepared now. 
+			<br>
+			<br>
+			When they try to free her from the demon's powerful hold, they realize that the demon they are facing is an ancient one name Malphas and is far more dangerous than they ever thought. They confine it in the piglet, but the police arrive and tries to arrest them for killing Young-shin by complaint from extremely traumatized parents. Choi runs out with the pig, faces many obstructions but successfully drowns it in the river as instructed by Kim (Luke 8:33). Young-shin who was considered dead shows signs of life and Father Kim's and Brother Choi's rashes disappears.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page29.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page27.html"></a>
+	</div>
 </body>
 </html>
