--- a/6_obsession/page29.html
+++ b/6_obsession/page29.html
@@ -6,6 +6,57 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Taste Of Money</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/29_1_TheTasteOfMoney.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/29_1_TheTasteOfMoney.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/29_2.jpg" alt="Foriegn Version"> 
+	</div>
+
+	<div class="flex two">
+		<img class="poster margin" src="assets/imgs/29_3_Chinese.jpg" alt="Korean Version"> 
+		<img class="poster" src="assets/imgs/29_4_Japanese.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Taste Of Money</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">	Im Sang-soon</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			In a luxurious house outside Seoul lives one of the country's richest families: company president Yoon, his wife Baek Geum-ok, their divorced daughter Nami, and son Chul. Yoon is company president but the reins of power are held by his wife Geum-ok, whose aged father was once a powerful businessman, and whom Yoon married for her money and influence. Yoon's private secretary is Joo Young-jak, from humble origins. His current job is making sure a U.S. businessman, Robert Altman, is kept happy with hookers, as part of a major business deal that could prove crucial to the family's fortunes. 
+			<br>
+			<br>
+			When Geum-ok sees Yoon having an affair with their Filipina maid, Eva, on her hidden CCTV, she beds Young-jak in revenge. When Chul is arrested for organizing a slush fund for Altman, Geum-ok decides to further punish her husband for his "mistake" in bringing the family's name into public disrepute, by having Eva killed. At the same time, Nami and Young-jak, start an affair. Yoon commits suicide over Eva's death (and takes the blame for his son's activities). After his funeral, Young-jak quits the family, glad to be rid of their influences. He accompanies Eva's coffin to the Philippines, where he is joined on the plane by Nami.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page30.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page28.html"></a>
+	</div>
 </body>
 </html>
