--- a/6_obsession/page30.html
+++ b/6_obsession/page30.html
@@ -6,6 +6,53 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Terror Live</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/30_1_TheTerrorLive.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/30_1_TheTerrorLive.jpg" alt="Korean Version"> 
+		<img class="poster margin" src="assets/imgs/30_2_Japanese.jpg" alt="Foriegn Version"> 
+		<img class="poster" src="assets/imgs/30_3.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Terror Live</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">	Kim Byung-woo</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			Yoon Young-hwa (Ha Jung-woo) was once a top news anchor, but gets demoted due to an unsavory incident. Pulled from primetime TV news and recently divorced, he is now the jaded and bitter host of a current affairs radio program. One day during his morning show, Yoon receives a peculiar phone call threatening to blow up the Mapo Bridge, a major bridge that crosses the Han River and connects Mapo District and Yeouido, Seoul's main business and investment banking district; it is also just outside Yoon's studio building. At first, Yoon takes it as a joke or prank call and tells the terrorist to proceed. He watches in shock as the caller follows through on the threat and detonates explosives that cause Mapo Bridge to collapse, killing innocent people and trapping others.
+			<br>
+			<br>
+			Realizing this could be a once-in-a-lifetime opportunity to make his comeback as a newscaster, Yoon purposely doesn't call the police. Instead, he sets up a makeshift television studio from his radio station, and negotiates with his former boss, the profit- and ratings-obsessed news producer Cha Dae-eun (Lee Geung-young) who'll do anything to beat the other TV stations in their coverage of the bombing. Then Yoon strikes a dangerous deal with the terrorist to exclusively broadcast their phone conversations live, in real-time, as the whole nation watches.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page31.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page29.html"></a>
+	</div>
 </body>
 </html>
