--- a/6_obsession/page31.html
+++ b/6_obsession/page31.html
@@ -6,6 +6,52 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Thieves</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/31_1_TheThieves.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/31_1_TheThieves.jpg" alt="Korean Version"> 
+		<img class="poster margin" src="assets/imgs/31_2.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Thieves</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Choi Dong-hoon</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			A cat burglar named Yenicall (Jun Ji-hyun) seduces the owner of Leesung Gallery (Shin Ha-kyun), and steals a rare artifact with the help of three other criminals: Popeye (Lee Jung-jae), the leader, Zampano (Kim Soo-hyun), the assistant, and Chewing Gum (Kim Hae-sook), a middle-aged conwoman. They are visited by a detective (Ju Jin-mo) shortly after, and realize that staying in Korea is too dangerous. They decide to join a heist led by a master thief named Macau Park (Kim Yoon-seok), a Korean based in Macau who is also Popeye's former boss. Popeye brings along Pepsi (Kim Hye-soo), a convicted safe-cracker who was recently released on parole. In Hong Kong, Chen (Simon Yam), Jonny (Derek Tsang) and Andrew (Oh Dal-su) are contacted by Macau Park and agree to enroll as the Chinese part of the team, along with a safe-cracker named Julie (Angelica Lee).
+			<br>
+			<br>
+			Macau Park reveals the target to be the Tear of the Sun, a valuable diamond in the possession of Tiffany (Yeh Soo-jung), the mistress of a powerful crime lord named Wei Hong (Ki Gook-seo). The plan is to steal the diamond while Tiffany is visiting a casino in Macau, and to sell it back to Wei Hong, a risky venture seeing that Wei Hong is known for murdering whoever offends him. Each team agrees, however, when they learn that the diamond is worth USD 20 million.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page32.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page30.html"></a>
+	</div>
 </body>
 </html>
