--- a/6_obsession/page32.html
+++ b/6_obsession/page32.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Unjust</title>
+	<title>The Unjust</title>
 	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Unjust</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/32_1_TheUnjust.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/32_1_TheUnjust.jpg" alt="Korean Version"> 
+		<img class="poster margin" src="assets/imgs/32_2.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Unjust</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Ryoo Seung-wan</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			After the rape and murder of 5 elementary schoolgirls, a crime which deeply upsets the entire country, a fleeing suspect is shot and killed by the police. This leads to bad publicity because the guilt of the suspect cannot be proved, and the real attacker may still be at large. Under pressure from the Blue House, a senior police official assigns Choi, a corrupt captain, on a highly sensitive mission, namely to find a former child rapist who can take the blame in exchange for money for his family. Choi, in return, is promised a promotion and the dismissal of an internal investigation against him, which was caused by his illicit collaboration with Jang, a corrupt businessman. Meanwhile, a corrupt prosecutor named Joo cancels the criminal charges against a corrupt businessman named Kim.
+			<br>
+			<br>
+			Choi searches through several profiles of rapists, and having settled upon Lee, a border-line retarded school-bus driver, he enlists Jang and his henchmen to kid-nap Lee and coach him in how the confession should be delivered. Jang, however, who is rivals with Kim, takes photographs of Kim and Joo playing golf, and has a henchman approach Kim and murder him. The photographs are mailed to Joo to ensure that Jang will never be prosecuted. At the police station, Lee is denied immunity to the death penalty, and as such, reneges on the deal and tells Joo the truth. In response, Jang sends the earlier henchman to suffer arrest and murder Lee from within the jail. This makes Joo furious and he investigates Choi, finding evidence of his and Jang's partnership. Choi, in response, pleads with Joo not to dismantle his career, and the two agree on a truce.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page32.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page30.html"></a>
+	</div>
 </body>
 </html>
