--- a/6_obsession/page33.html
+++ b/6_obsession/page33.html
@@ -6,6 +6,55 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">The Wailing</div>
 
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/33_1_TheWailing.jpeg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/33_1_TheWailing.jpeg" alt="Korean Version"> 
+		<img class="poster margin" src="assets/imgs/33_2.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">The Wailing</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Na Hong-jin</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			A Japanese man has recently arrived at a little village in the mountains of South Korea, living in a secluded house. A mysterious disease starts spreading among the villagers, causing a rash which precedes violent murderous outbreaks followed by stupor and eventually death.
+			<br>
+			<br>
+			Police officer Jong-goo, who is investigating the case, meets a mysterious young woman called Moo-myeong (“no name” in Korean), who tells him about the Japanese stranger, and later disappears. A local hunter tells Jong-goo that he saw the near-naked stranger eating a deer, with glowing red eyes. Jong-goo is unsettled, as he has had dreams about this stranger, which the hunter had described to him. He enlists the help of another police officer, and a Japanese-speaking deacon to serve as translator, and they investigate the stranger's house while he is away. The other police officer finds pictures of the infected and murdered residents and their belongings. He is too shocked to say anything to the others. The stranger's house guard dog attacks the deacon and Jong-goo. The stranger arrives and pacifies the dog, and the other three leave.
+			<br>
+			<br>
+			The police officer tells Jong-goo of what he saw, and hands over a shoe which belongs to Jong-goo's daughter, Hyo-jin. Soon, Hyo-jin becomes sick and displays similar symptoms as the other infected villagers. Jong-goo makes his way to the stranger’s house with the deacon in anger, but finds that the pictures and evidence have been burned. Infuriated, he destroys the stranger's worship room and kills the dog when it attacks him, ordering the stranger to leave the village.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page34.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page32.html"></a>
+	</div>
 </body>
 </html>
