--- a/6_obsession/page34.html
+++ b/6_obsession/page34.html
@@ -6,6 +6,53 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Thirst</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/34_1_Thirst.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/34_1_Thirst.jpg" alt="Korean Version"> 
+		<img class="poster margin" src="assets/imgs/34_2.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Thirst</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Park Chan-wook</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			Sang-hyun (Song Kang-ho) is a Catholic priest who volunteers at the hospital, providing ministry to the patients. He is well respected for his unwavering faith and dedicated service, but he secretly suffers from feelings of doubt and sadness. Sang-hyun volunteers to participate in an experiment to find a vaccine for the deadly Emmanuel Virus (EV). Although the experiment fails, and Sang-hyun is infected with the seemingly fatal disease, he makes a complete and rapid recovery after receiving a blood transfusion.
+			<br>
+			<br>
+			News of his marvelous recovery quickly spreads among the devout parishioners of Sang-hyun’s congregation, and they begin to believe that he has a miraculous gift for healing. Soon, thousands more flock to Sang-hyun’s services. Among the new churchgoers are Kang-woo (Shin Ha-kyun), Sang-hyun’s childhood friend, and his family. Kang-woo invites his old friend to join the weekly mahjong night at his house, and there, Sang-hyun finds himself attracted to Kang-woo’s wife, Tae-ju (Kim Ok-bin). Sang-hyun later relapses into his illness and wakes in dire need of shelter from the sunlight, having become a vampire.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="next">
+		<a href="page35.html"></a>
+	</div>
+
+	<div class="back">
+		<a href="page33.html"></a>
+	</div>
 
 </body>
 </html>
