--- a/6_obsession/page36.html
+++ b/6_obsession/page36.html
@@ -6,6 +6,47 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+		<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+	</div>
+	
+	<div class="movietitle">Tunnel</div>
+
+	<div class="centeredposter"> 
+		<p style="text-align: center;"> <img src="assets/imgs/36_1_Tunnel.jpg" alt="Korean Version" style="width: 50%;"> </p>
+	</div>
+
+	<br>
+	<br>
+
+	<div class="flex">
+		<img class="poster margin" src="assets/imgs/36_1_Tunnel.jpg" alt="Korean Version"> 
+		<img class="poster margin" src="assets/imgs/36_2_Japanese.jpg" alt="Foriegn Version"> 
+		<img class="poster" src="assets/imgs/36_3.jpg" alt="Foriegn Version"> 
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="white">
+		<h3 class="bold"> Title </h3>
+		<p class="regular">Tunnelr</p>
+		<br>
+		<h3 class="bold"> Director </h3>
+		<p class="regular">Kim Seong-hun</p>	
+		<br>
+		<h3 class="bold"> Plot </h3>
+		<p class="regular"> 
+			Lee Jung-soo (Ha Jung-woo) drives home for his daughter's birthday. While driving through a tunnel that goes through a mountain, the tunnel collapses. When Lee Jung-Soo regains consciousness, he finds himself trapped inside his car. The car itself is buried under tons of concrete and debris. All he has inside the car are his cellphone, two bottles of water and his daughter's birthday cake. He forms a kind of special bond with the head of the rescue team, Dae-kyung, who teaches him how to survive in the tunnel.
+		<br>
+		<br>
+		<h3 class="bold"> Posters </h3>
+		<p class="regular"> The Korean version  </p>
+	</div>
+
+	<div class="back">
+		<a href="page35.html"></a>
+	</div>
 
 </body>
 </html>
