--- a/6_obsession/page4.html
+++ b/6_obsession/page4.html
@@ -35,7 +35,7 @@
 			<h3 class="bold"> Director </h3>
 			<p class="regular">Kim Sung-su</p>	
 			<br>
-			<h3 class="bold"> Summary </h3>
+			<h3 class="bold"> Plot </h3>
 			<p class="regular"> 
 				The opening scene shows a group of illegal immigrants that are being prepared to be smuggled to South Korea inside a shipping container. As they are about to be sent overseas, one of the traffickers notices people coughing. After the immigrants deny any illness, he seals the container which is then sent to Korea. 9 days later, on May 1, the container reaches Pyongtaek harbor, and is transported inland.
 			</p>
