--- a/6_obsession/page6.html
+++ b/6_obsession/page6.html
@@ -35,7 +35,7 @@
 			<h3 class="bold"> Director </h3>
 			<p class="regular">Park Sang-joon</p>	
 			<br>
-			<h3 class="bold"> Summary </h3>
+			<h3 class="bold"> Plot </h3>
 			<p class="regular"> 
 				In Japanese-occupied Korea, a conman operating under the sobriquet of "Count Fujiwara" plans to seduce a Japanese heiress named Lady Hideko, then marry her and commit her to an asylum in order to steal her inheritance. He hires a pickpocket named Sook-hee from a family of con artists to become Hideko's maid and encourage Hideko to marry him.
 				<br>
