--- a/6_obsession/page12.html
+++ b/6_obsession/page12.html
@@ -36,7 +36,7 @@
 		<h3 class="bold"> Director </h3>
 		<p class="regular">Lee Chang-dong</p>	
 		<br>
-		<h3 class="bold"> Summary </h3>
+		<h3 class="bold"> Plot </h3>
 		<p class="regular"> 
 			Upon his release from prison, Hong Jong-du (Sol Kyung-gu) goes looking for his relatives in Seoul. His brothers have moved and neither they and nor their mother are aware Jong-du is back on the streets after serving a three-year prison term for a hit-and-run accident. He quickly discovers that during his absence his family has moved without telling him. Oblivious to society's rules, Jong-du again ends up in police custody for non-payment of a restaurant bill. He is bailed out by his younger brother Jong-sae (Ryoo Seung-wan) and reunited with his estranged family who reluctantly take him back in. Slightly mentally disabled and an incurable social misfit, Jong-du is hired as a delivery boy for a neighborhood Chinese restaurant on the recommendation of his older brother Jong-il (Ahn Nae-sang).
 		</p>
