--- a/6_obsession/page3.html
+++ b/6_obsession/page3.html
@@ -35,7 +35,7 @@
 			<h3 class="bold"> Director </h3>
 			<p class="regular">Kim Seong-hun</p>	
 			<br>
-			<h3 class="bold"> Summary </h3>
+			<h3 class="bold"> Plot </h3>
 			<p class="regular"> 
 				Ko, a corrupt detective whose mother recently died, drives away in the middle of the funeral, having been informed that his squad is being investigated by internal affairs for bribery. He crashes into a homeless man who wanders onto the road, killing him. Fearing manslaughter charges, as he is intoxicated, Ko declines to call the police, and hides the body from a passing patrol car. With the body in his trunk, he returns to the funeral and manages to seal the body into his mother's coffin while escaping detection. A few days later, Ko purposely gets into another crash, which conceals the earlier damage and gives him a reason to visit the repair shop. To the fortune of Ko and his squad, the aforementioned investigation is cancelled by a lieutenant named Park. 
 			</p>
